# fuel-specs

./: .gitignore  .gitreview  AUTHORS  CONTRIBUTING.rst  ChangeLog  LICENSE  README.rst  VETO  log  requirements.txt  setup.cfg  tox.ini
doc/source/: conf.py  footer.rst.template  header.rst.template  index.rst  policy
policy/: VETO  team-structure.rst
specs/: template.rst
specs/10.0/: apply-mu-using-custom-deployment-graph.rst  apply-mu-using-custom-deployment-graph.rtf  astute_yaml_dissect.rst  build-fuel-packages-using-perestroika.rst  ccp.rst  consolidate-fuel-client.rst  custom-ca-bundle-verify-vcenter-cert.rst  fuel-devops-client-as-a-module.rst  fuel-packages-customizations-detection.rst  fuel-qa-assertions-enhancement.rst  fuel-qa-failure-reason-grouping.rst  fuel-release-pao.rst  fuelclient-modify-release-repos.rst  get-binary-kernel-module-packages-from-dkms.rst  graph-based-upgrade.rst  graph-concept-extension.rst  isolated-controllers-deployment.rst  libvirtd-auth.rst  master-node-installation-as-devops-extension.rst  migration-to-ubuntu-xenial.rst  multiple-vcenters.rst  nailgun-api-env-upgrade-extensions.rst  network-config-proxy.rst  network-manager-extension.rst  nics-and-nodes-attributes-via-plugin.rst  package-puppet-modules.rst  puppet-noop-run.rst  release-as-a-plugin.rst  release-description-in-fuel-library.rst  role-decomposition.rst  s3-keystone-integration.rst  shotgun-retirement.rst  split-fuel-puppet-module.rst  tasks-inheritance.rst  ui-custom-graph.rst  (+8 more)
tests/: base.py  test_titles.py  test_titles_up_to_6_1.py  test_titles_up_to_7_0.py
(+381 files in other folders)
